--- a/Notebooks/Goal 2-Logistic Regression.ipynb
+++ b/Notebooks/Goal 2-Logistic Regression.ipynb
@@ -317,7 +317,7 @@
     }
    ],
    "source": [
-    "#create logistic regression, input GDP, output is_top20\n",
+    "#create logistic regression\n",
     "X = df[['TotalWorkingYears', 'MonthlyIncome', 'YearsSinceLastPromotion', 'TrainingTimesLastYear', 'YearsWithCurrManager']]\n",
     "y = df.Gender_Code\n",
     "crossval = log_reg(X, y, 10)\n",
