--- a/Notebooks/Data Analysis.ipynb
+++ b/Notebooks/Data Analysis.ipynb
@@ -268,7 +268,7 @@
     }
    ],
    "source": [
-    "#read in NFL combine  file\n",
+    "#read in dataset\n",
     "file = '..\\\\Data\\\\general_data.csv'\n",
     "df = pd.read_csv(file, index_col=8)\n",
     "df.head()"
@@ -681,6 +681,7 @@
     }
    ],
    "source": [
+    "#look at quick analysis of each column\n",
     "df.describe(include='all')"
    ]
   },
@@ -785,17 +786,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#add new gender column\n",
-    "df['Gender_Code'] = 0\n",
-    "df.loc[df['Gender'] == 'Female', 'Gender_Code'] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1044,27 +1034,31 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#add new gender_code column\n",
+    "df['Gender_Code'] = 0\n",
+    "df.loc[df['Gender'] == 'Female', 'Gender_Code'] = 1\n",
+    "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1b18b10cbb0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2386e886640>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1088,16 +1082,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1b18b85b850>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2386f0245e0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1121,47 +1115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#save new dataset to csv\n",
-    "file = '..\\\\Data\\\\Final_Data.csv'\n",
-    "df.to_csv(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_new = df[['Age',\n",
-    "'DistanceFromHome',\n",
-    "'Education',\n",
-    "'EmployeeCount',\n",
-    "'JobLevel',\n",
-    "'MonthlyIncome',\n",
-    "'NumCompaniesWorked',\n",
-    "'PercentSalaryHike',\n",
-    "'StandardHours',\n",
-    "'StockOptionLevel',\n",
-    "'TotalWorkingYears',\n",
-    "'TrainingTimesLastYear',\n",
-    "'YearsAtCompany',\n",
-    "'YearsSinceLastPromotion',\n",
-    "'YearsWithCurrManager']]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x232751ad910>"
+       "<seaborn.axisgrid.PairGrid at 0x2386f09b700>"
       ]
      },
      "execution_count": 10,
@@ -1182,16 +1142,36 @@
     }
    ],
    "source": [
-    "#erform a quick comparison of all data to understand general patterns\n",
+    "#look at numeric valued columns and do a quick comparison of all data to understand general patterns\n",
+    "df_new = df[['Age',\n",
+    "'DistanceFromHome',\n",
+    "'Education',\n",
+    "'EmployeeCount',\n",
+    "'JobLevel',\n",
+    "'MonthlyIncome',\n",
+    "'NumCompaniesWorked',\n",
+    "'PercentSalaryHike',\n",
+    "'StandardHours',\n",
+    "'StockOptionLevel',\n",
+    "'TotalWorkingYears',\n",
+    "'TrainingTimesLastYear',\n",
+    "'YearsAtCompany',\n",
+    "'YearsSinceLastPromotion',\n",
+    "'YearsWithCurrManager']]\n",
+    "\n",
     "sns.pairplot(df_new)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#save new dataset to csv\n",
+    "file = '..\\\\Data\\\\Final_Data.csv'\n",
+    "df.to_csv(file)"
+   ]
   }
  ],
  "metadata": {
